# PosterBackend

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEPENDENCIES.md  INSTALL_v0.3.0.md  Immich架構分析報告.md  PRD-海報展示與申請系統-前台.md  PRD-海報資料庫後台.md  Rust技術架構分析報告.md  multi-agent-tools-research.md  theme-image-prompts.md  設計提示詞-後台全頁面.md
docs/plans/: 2026-04-07-chunked-upload.md  2026-04-07-upload-copaw-integration.md
scripts/: login-recovery.sh
src/: index.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/llama-server/: libggml-base.0.10.0.dylib  libllama-common.0.dylib  libllama.0.0.8878.dylib  libllama.0.dylib  libmtmd.0.0.8878.dylib  libmtmd.0.dylib
src-tauri/src/: lib.rs
src-tauri/src/commands/: application.rs  auth.rs  copaw.rs  mod.rs  model_download.rs  profile.rs  project.rs  review.rs  upload.rs
src-tauri/src/services/: immich.rs  mod.rs  supabase.rs  tus.rs  upload_db.rs
src-tauri/src/services/qwenpaw/: analysis.rs  llama_sidecar.rs  metadata.rs  mod.rs  notify.rs  status.rs  task_queue.rs  thumbnail.rs  vlm_local.rs
src/components/: PermissionModal.tsx  PosterPickerModal.tsx  ProjectProgressPanel.tsx  SortablePosterCard.tsx  ThemeDeleteConfirm.tsx  ThemeEditModal.tsx  UpdateBanner.tsx
src/hooks/: useCoPawNotification.ts  useQwenpawProgress.ts  useTauriUpload.ts
src/lib/: api.ts  opfsModelCache.ts  (+1 more)
supabase/: README.md  apply_now.sql
(+38 files in other folders)
