[package]
name = "poster-admin-app"
version = "0.1.0"
description = "慈濟海報資料庫後台 Tauri Desktop App"
authors = ["Tzu Chi Foundation"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
dirs = "6"
dotenvy = "0.15"
urlencoding = "2"
sha2 = "0.10"
open = "5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Qwenpaw agent — local image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
webp = "0.3"
kamadak-exif = "0.6"
